--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="copyright" content="Punnam Radhika">
     <meta name="reply-to" content="radhikapunnam1@gmail.com">
     <meta name="owner" content="Punnam Radhika">
-    <meta name="url" content="https://alisolanki.github.io/Portfolio/">
-    <meta name="identifier-URL" content="https://alisolanki.github.io/Portfolio/">
+    <meta name="url" content="https://punnamradhika.github.io/Portfolio-website/">
+    <meta name="identifier-URL" content="https://punnamradhika.github.io/Portfolio-website/">
     <meta name="directory" content="submission">
     <meta name="category" content="Business | Portfolio">
     <meta name="coverage" content="Worldwide">
@@ -225,7 +225,7 @@
 			
 			<div class="intro-info">
 				<img src="images/profile-pic.jpg" alt="Punnam Radhika Picture">
-				<p class="lead">"Lad with a <font color="#FF0077">million</font> dreams."</p>
+				<p class="lead">"Girl with a <font color="#FF0077">million</font> dreams."</p>
 			</div>
 			
 			
