--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://leetcode.com/u/Radhika3-/" title="LeetCode" target="_blank">
+					<a href="https://leetcode.com/u/Radhika3-_/" title="LeetCode" target="_blank">
 						<img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode Logo">
 					</a>
 				</li>
@@ -784,7 +784,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="https://leetcode.com/u/Radhika3-/" title="LeetCode" target="_blank">
+						<a href="https://leetcode.com/u/Radhika3-_/" title="LeetCode" target="_blank">
 							<img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode Logo">
 						</a>
 					</li>
